Fix test cases for hadoop version change.